<resources>
    <string name="app_name">Tasklyy</string>
    <string name="web_id">534662789341-jpjcjb5sq2vgsqj450i4ocqa39sffd6o.apps.googleusercontent.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="continue_google">Continue with Google</string>
    <string name="create_account">Create account</string>
    <string name="signout">signout</string>
    <string name="confirm_password">confirm password</string>
    <string name="signup">SignUp</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="board">Board</string>
    <string name="calendar">Calendar</string>
    <string name="report">Report</string>
    <string name="settings">Settings</string>
    <string name="username">UserName</string>
    <string name="useremail">UserEmail</string>
    <string name="project_nav">project</string>
    <string name="filter_nav">filter</string>
    <string name="dashboard_nav">dashboard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_calendar_fragment">hello_calendar_fragment</string>
    <string name="todo">Todo</string>
    <string name="high">High</string>
    <string name="task_title">Task title</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="signin_with_google">SignIn With Google</string>
    <string name="title_task">Title</string>
    <string name="enter_task_title">Enter title</string>
    <string name="task_description">Description</string>
    <string name="et_task_description">Enter description</string>
    <string name="task_priority">Priority</string>
    <string name="task_priority_high">High</string>
    <string name="task_priority_medium">Medium</string>
    <string name="task_priority_low">Low</string>
    <string name="task_assignee">Assignee</string>
    <string name="task_due_date">Due Date</string>
    <string name="select_due_date">Select due date</string>
    <string name="task_status">Status</string>
    <string name="task_add">Save Task</string>
    <string name="select_date">Select Date</string>
    <string name="no_date_selected">No date selected</string>
    <string name="select_date_task">Select Date</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="openadd_edit_task_screen">openADD_EDIT_TASK_SCREEN</string>

    <string-array name="status_array">
    <item>Todo</item>
    <item>In Progress</item>
    <item>Done</item>
    </string-array>


</resources>