<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <!-- App Title -->
        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/primaryText"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="32dp" />

        <!-- username -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:boxStrokeColor="@color/primaryColor"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="2dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="12dp"
            app:boxStrokeColor="@color/primaryColor"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="2dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:hintEnabled="true"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login Button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="@color/backgroundColor"
            android:background="@drawable/rounded_button"
            app:backgroundTint="@null"
            app:iconTint="@color/white"
            app:cornerRadius="0dp" />
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:indeterminate="true"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btnSignInWithGoogle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/signin_with_google"
            android:textStyle="bold"
            android:textColor="@color/backgroundColor"
            android:background="@drawable/rounded_button"
            app:backgroundTint="@null"
            app:iconTint="@color/white"
            app:cornerRadius="0dp" />

        <TextView
            android:id="@+id/tvCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/primaryColor"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium" />
    </LinearLayout>
</ScrollView>
